--- a/public/deep-dive.html
+++ b/public/deep-dive.html
@@ -867,7 +867,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@xterm/xterm@5.5.0/lib/xterm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/socket.io-client@4.7.2/dist/socket.io.js"></script>
 
-    <script>
+    <script type="module">
+        import { NostrConnectSigner } from '/vendor/bunker-client.js';
+        import { getEventHash, verifySignature } from 'https://esm.sh/nostr-tools@2.7.0';
         
         class LoginManager {
             constructor() {
@@ -881,6 +883,7 @@
                 this.bunkerInput = document.getElementById('bunker-npub');
                 this.callbacks = [];
                 this.token = null;
+                this.metadata = { name: 'tman', url: window.location.origin };
             }
 
             onAuthenticated(cb) {
@@ -893,7 +896,7 @@
             async init() {
                 this.bind();
                 const existing = this.getToken();
-                if (existing && this.isValid(existing)) {
+                if (existing && this.isValid(existing) && this.verifyStored(existing)) {
                     this.refreshIfNeeded(existing);
                     this.token = existing;
                     this.overlay.classList.add('hidden');
@@ -948,20 +951,87 @@
                 }
             }
 
-            async loginExtension() {
+            createChallenge() {
+                const bytes = new Uint8Array(16);
+                crypto.getRandomValues(bytes);
+                return Array.from(bytes, (b) => b.toString(16).padStart(2, '0')).join('');
+            }
+
+            buildChallengeEvent(challenge) {
+                return {
+                    kind: 27235,
+                    created_at: Math.floor(Date.now() / 1000),
+                    tags: [['challenge', challenge]],
+                    content: `tman-login:${challenge}`
+                };
+            }
+
+            async signWithExtension() {
+                if (!window.nostr?.signEvent || !window.nostr?.getPublicKey) {
+                    throw new Error('No Nostr extension detected');
+                }
+                const challenge = this.createChallenge();
+                let event = this.buildChallengeEvent(challenge);
+                event.pubkey = await window.nostr.getPublicKey();
+                const signed = await window.nostr.signEvent(event);
+                signed.id = signed.id || getEventHash(signed);
+                if (!verifySignature(signed)) {
+                    throw new Error('Signature verification failed');
+                }
+                return {
+                    method: 'extension',
+                    pubkey: signed.pubkey,
+                    challenge,
+                    issuedAt: Date.now(),
+                    expiresAt: Date.now() + this.weekMs,
+                    event: signed
+                };
+            }
+
+            async signWithBunker() {
+                const code = (this.bunkerInput?.value || '').trim();
+                if (!code || !code.startsWith('bunker')) {
+                    throw new Error('Paste a valid bunker code (bunker://…)');
+                }
+                const signer = await NostrConnectSigner.fromBunkerURI(code, {
+                    metadata: this.metadata
+                });
+                const challenge = this.createChallenge();
+                let event = this.buildChallengeEvent(challenge);
+                event.pubkey = await signer.getPublicKey();
+                const signed = await signer.signEvent(event);
+                signed.id = signed.id || getEventHash(signed);
+                if (!verifySignature(signed)) {
+                    throw new Error('Signature verification failed');
+                }
                 try {
-                    if (!window.nostr || !window.nostr.getPublicKey) {
-                        this.setError('No Nostr extension detected.');
-                        return;
+                    if (typeof signer.disconnect === 'function') {
+                        await signer.disconnect();
                     }
-                    const pubkey = await window.nostr.getPublicKey();
-                    const token = {
-                        method: 'extension',
-                        pubkey,
-                        issuedAt: Date.now(),
-                        expiresAt: Date.now() + this.weekMs,
-                        token: crypto.randomUUID()
-                    };
+                } catch (_) {}
+                return {
+                    method: 'bunker',
+                    pubkey: signed.pubkey,
+                    challenge,
+                    issuedAt: Date.now(),
+                    expiresAt: Date.now() + this.weekMs,
+                    event: signed
+                };
+            }
+
+            verifyStored(token) {
+                try {
+                    if (!token?.event) return false;
+                    return verifySignature(token.event);
+                } catch (_) {
+                    return false;
+                }
+            }
+
+            async loginExtension() {
+                this.setError('');
+                try {
+                    const token = await this.signWithExtension();
                     this.saveToken(token);
                 } catch (err) {
                     this.setError(err?.message || 'Extension sign-in failed');
@@ -969,19 +1039,10 @@
             }
 
             loginBunker() {
-                const code = (this.bunkerInput?.value || '').trim();
-                if (!code || !code.startsWith('bunker')) {
-                    this.setError('Paste a valid bunker code (bunker://…)');
-                    return;
-                }
-                const token = {
-                    method: 'bunker',
-                    code,
-                    issuedAt: Date.now(),
-                    expiresAt: Date.now() + this.weekMs,
-                    token: crypto.randomUUID()
-                };
-                this.saveToken(token);
+                this.setError('');
+                this.signWithBunker()
+                    .then((token) => this.saveToken(token))
+                    .catch((err) => this.setError(err?.message || 'Bunker sign-in failed'));
             }
         }
 
