render user menu in status pill

--- a/public/deep-dive.html
+++ b/public/deep-dive.html
@@ -884,6 +884,10 @@
                 <div id="connection-status" class="connection-status connecting">
                     <span class="status-dot"></span>
                     <span>Connecting...</span>
+                    <div id="user-menu" class="user-menu">
+                        <div class="user-menu-header" id="user-menu-header">Not signed in</div>
+                        <div class="user-menu-item" id="user-menu-logout">Log out</div>
+                    </div>
                 </div>
             </div>
             <div class="terminal-container">
